--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Teacher tools",
+  "name": "Teacher Tools",
   "short_name": "TeachTools",
   "description": "Bienvenid@s a Teacher Tools, tu asisente para gestionar clases",
   "background_color": "#e0e8f8",
